src/output/snapshots/transmute__output__xml__tests__write_fibonacci_rec.snap
---
source: src/output/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">f</ident>
      <ident id="ident:1">n</ident>
      <ident id="ident:2">number</ident>
      <ident id="ident:3">add</ident>
      <ident id="ident:4">boolean</ident>
      <ident id="ident:5">div</ident>
      <ident id="ident:6">eq</ident>
      <ident id="ident:7">ge</ident>
      <ident id="ident:8">gt</ident>
      <ident id="ident:9">le</ident>
      <ident id="ident:10">lt</ident>
      <ident id="ident:11">mul</ident>
      <ident id="ident:12">neg</ident>
      <ident id="ident:13">neq</ident>
      <ident id="ident:14">sub</ident>
      <ident id="ident:15">void</ident>
    </identifiers>
    <stmt id="stmt:3" line="2" column="13" start="13" len="152">
      <fn>
        <identifier line="2" column="17" start="17" len="1">f</identifier>
        <type line="2" column="31" start="31" len="6">number</type>
        <parameters>
          <parameter id="stmt:3:0" line="2" column="19" start="19" len="9">
            <name line="2" column="19" start="19" len="1">n</name>
            <type line="2" column="22" start="22" len="6">number</type>
          </parameter>
        </parameters>
        <body line="2" column="40" start="40" len="125">
          <expr id="expr:15" line="2" column="40" start="40" len="125">
            <block>
              <stmt id="stmt:1" line="3" column="17" start="58" len="56">
                <expr id="expr:5" line="3" column="17" start="58" len="56">
                  <if>
                    <condition>
                      <expr id="expr:2" line="3" column="20" start="61" len="6">
                        <call line="3" column="20" start="61" len="6" ident-ref="ident:9" name="le" target-id="native:le:number:number:boolean">
                          <parameters>
                            <parameter>
                              <expr id="expr:0" line="3" column="20" start="61" len="1">
                                <identifier-ref id="ident-ref:2" ident-ref="ident:1" target-id="stmt:3:0" type-ref="">n</identifier-ref>
                              </expr>
                            </parameter>
                            <parameter>
                              <expr id="expr:1" line="3" column="25" start="66" len="1">
                                <number>1</number>
                              </expr>
                            </parameter>
                          </parameters>
                        </call>
                      </expr>
                    </condition>
                    <true>
                      <expr id="expr:4" line="3" column="27" start="68" len="46">
                        <block>
                          <stmt id="stmt:0" line="4" column="21" start="90" len="6">
                            <ret mode="explicit" line="4" column="21" start="90" len="6">
                              <expr id="expr:3" line="4" column="25" start="94" len="1">
                                <identifier-ref id="ident-ref:3" ident-ref="ident:1" target-id="stmt:3:0" type-ref="">n</identifier-ref>
                              </expr>
                            </ret>
                          </stmt>
                        </block>
                      </expr>
                    </true>
                  </if>
                </expr>
              </stmt>
              <stmt id="stmt:2" line="6" column="17" start="131" len="20">
                <ret mode="implicit" line="6" column="17" start="131" len="20">
                  <expr id="expr:14" line="6" column="17" start="131" len="19">
                    <call line="6" column="17" start="131" len="19" ident-ref="ident:3" name="add" target-id="native:add:number:number:number">
                      <parameters>
                        <parameter>
                          <expr id="expr:9" line="6" column="17" start="131" len="8">
                            <call line="6" column="17" start="131" len="8" ident-ref="ident:0" name="f" target-id="stmt:3">
                              <parameters>
                                <parameter>
                                  <expr id="expr:8" line="6" column="19" start="133" len="5">
                                    <call line="6" column="19" start="133" len="5" ident-ref="ident:14" name="sub" target-id="native:sub:number:number:number">
                                      <parameters>
                                        <parameter>
                                          <expr id="expr:6" line="6" column="19" start="133" len="1">
                                            <identifier-ref id="ident-ref:4" ident-ref="ident:1" target-id="stmt:3:0" type-ref="">n</identifier-ref>
                                          </expr>
                                        </parameter>
                                        <parameter>
                                          <expr id="expr:7" line="6" column="23" start="137" len="1">
                                            <number>1</number>
                                          </expr>
                                        </parameter>
                                      </parameters>
                                    </call>
                                  </expr>
                                </parameter>
                              </parameters>
                            </call>
                          </expr>
                        </parameter>
                        <parameter>
                          <expr id="expr:13" line="6" column="28" start="142" len="8">
                            <call line="6" column="28" start="142" len="8" ident-ref="ident:0" name="f" target-id="stmt:3">
                              <parameters>
                                <parameter>
                                  <expr id="expr:12" line="6" column="30" start="144" len="5">
                                    <call line="6" column="30" start="144" len="5" ident-ref="ident:14" name="sub" target-id="native:sub:number:number:number">
                                      <parameters>
                                        <parameter>
                                          <expr id="expr:10" line="6" column="30" start="144" len="1">
                                            <identifier-ref id="ident-ref:6" ident-ref="ident:1" target-id="stmt:3:0" type-ref="">n</identifier-ref>
                                          </expr>
                                        </parameter>
                                        <parameter>
                                          <expr id="expr:11" line="6" column="34" start="148" len="1">
                                            <number>2</number>
                                          </expr>
                                        </parameter>
                                      </parameters>
                                    </call>
                                  </expr>
                                </parameter>
                              </parameters>
                            </call>
                          </expr>
                        </parameter>
                      </parameters>
                    </call>
                  </expr>
                </ret>
              </stmt>
            </block>
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
