src/output/snapshots/transmute__output__xml__tests__write_if.snap
---
source: src/output/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">add</ident>
      <ident id="ident:1">boolean</ident>
      <ident id="ident:2">div</ident>
      <ident id="ident:3">eq</ident>
      <ident id="ident:4">ge</ident>
      <ident id="ident:5">gt</ident>
      <ident id="ident:6">le</ident>
      <ident id="ident:7">lt</ident>
      <ident id="ident:8">mul</ident>
      <ident id="ident:9">neg</ident>
      <ident id="ident:10">neq</ident>
      <ident id="ident:11">number</ident>
      <ident id="ident:12">sub</ident>
      <ident id="ident:13">void</ident>
    </identifiers>
    <stmt id="stmt:4" line="1" column="1" start="0" len="48">
      <expr id="expr:10" line="1" column="1" start="0" len="48">
        <if>
          <condition>
            <expr id="expr:0" line="1" column="4" start="3" len="4">
              <bool>true</bool>
            </expr>
          </condition>
          <true>
            <expr id="expr:2" line="1" column="9" start="8" len="7">
              <block>
                <stmt id="stmt:0" line="1" column="11" start="10" len="3">
                  <expr id="expr:1" line="1" column="11" start="10" len="2">
                    <number>42</number>
                  </expr>
                </stmt>
              </block>
            </expr>
          </true>
          <false>
            <expr id="expr:9" line="1" column="22" start="21" len="27">
              <block>
                <stmt id="stmt:3" line="1" column="22" start="21" len="27">
                  <expr id="expr:8" line="1" column="22" start="21" len="27">
                    <if>
                      <condition>
                        <expr id="expr:3" line="1" column="25" start="24" len="5">
                          <bool>false</bool>
                        </expr>
                      </condition>
                      <true>
                        <expr id="expr:5" line="1" column="31" start="30" len="6">
                          <block>
                            <stmt id="stmt:1" line="1" column="33" start="32" len="2">
                              <expr id="expr:4" line="1" column="33" start="32" len="1">
                                <number>0</number>
                              </expr>
                            </stmt>
                          </block>
                        </expr>
                      </true>
                      <false>
                        <expr id="expr:7" line="1" column="43" start="42" len="6">
                          <block>
                            <stmt id="stmt:2" line="1" column="45" start="44" len="2">
                              <expr id="expr:6" line="1" column="45" start="44" len="1">
                                <number>1</number>
                              </expr>
                            </stmt>
                          </block>
                        </expr>
                      </false>
                    </if>
                  </expr>
                </stmt>
              </block>
            </expr>
          </false>
        </if>
      </expr>
    </stmt>
  </ast>
</unit>
